--- a/index/VIPPower.html
+++ b/index/VIPPower.html
@@ -30,7 +30,7 @@
 					</span>
 					<span class = "vipSocre">共<span>12345</span>积分</span>
 				</span>
-				<a>
+				<a href = "#" id = "allScore">
 					<img src="VIPPower_images/details@2x.png" alt="" class = "powIntro">
 					<span class = "powIntroTitle">积分明细</span>
 				</a>
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- 模态框 -->
+	<!-- 特权说明模态框 -->
 	<div class = "mask">
 		<div class = "motai">
 			<img src="VIPPower_images/btn_close@2x.png" alt="" id = "close">
@@ -106,6 +106,44 @@
 			</p>
 			<p class = "leverWay">达到<span>20000</span>分可以升级到<span>v3</span>级别会员</p>
 		</div> 
+	</div>
+	<!-- 积分明细弹出框 -->
+	<div class = "detailMask">
+		<div class = "motaiAnother">
+			<img src="VIPPower_images/btn_close@2x.png" alt="" id = "closetwo">
+			<p class = "scorTitle">当前分数 (每月1号更新)</p>
+			<p class = "nowScor">
+				<span>12345</span>
+				<span>分</span>
+			</p>
+			<p class = "leverWay">达到<span>20000</span>分可以升级到<span>v3</span>级别会员</p>
+			<div class = "detaiOutsize">
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+				<div class = "detailShow">
+					<p>完成新手任务+1</p>
+					<p>03-05</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	<script src = "js/jquery-1.11.3.js"></script>
 	<script src = "js/VIPPower.js"></script>
