wine_app_17.03.27am
完成更多专属礼品页面

--- a/index/VIPPower.html
+++ b/index/VIPPower.html
@@ -42,8 +42,8 @@
 		<div class = "vipNowPower">
 			<img src="VIPPower_images/280721501213663479.png" alt="" class = "arrow">
 			<p class = "title">
-				<span>当前等级专属特权</span>
-				<a href = "#" class = "morePower">更多专属特权 &gt;</a>
+				<span class = "titleOne">当前等级专属特权</span>
+				<a href = "morePower.html" class = "morePower">更多专属特权 &gt;</a>
 			</p>
 			<div class = "content">
 				<a href = "#">
@@ -64,8 +64,8 @@
 		<div class = "vipGift">
 			<img src="VIPPower_images/280721501213663479.png" alt="" class = "arrow">
 			<p class="title">
-				<span>当前等级专属礼品</span>
-				<a href = "#" class = "morePower">更多专属礼品 &gt;</a>
+				<span class = "titleOne">当前等级专属礼品</span>
+				<a href = "moreGift.html" class = "morePower">更多专属礼品 &gt;</a>
 			</p>
 			<div class = "content">
 				<a href="#">
