--- a/index/login.html
+++ b/index/login.html
@@ -16,26 +16,83 @@
 	</header>
 	<section id = "main">
 		<div class = "main">
+			<!-- 登录注册按钮 -->
 			<div class = "userlogin">
-				<a href="#">
-					<img src="login_images/sign-in.png" alt="">
+				<a href="#" id = "loginbtn">
+					<img src="login_images/sign-in.png" alt="" class = "loginImg">
 				</a>
-				<a href="#">
-					<img src="login_images/sign-up.png" alt="">
+				<a href="#" id = "signupbtn">
+					<img src="login_images/sign-up.png" alt="" class = "signupImg">
 				</a>
 			</div>
+			<!-- 登录框 -->
 			<div class = "signIn">
 				<img src="login_images/triangle.png" alt="" class = "arrow">
-				<div class = "inputIn">
-					<input type="text" placeholder = "请输入手机号码">
-					<img src="login_images/cancel.png" alt="" class = "delete">
+				<!-- 登录页内容 -->
+				<div class = "inputOut">
+					<div class = "inputIn">
+						<input type="text" placeholder = "请输入手机号码" id = "textIn" class = "nowwell">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "textIn">
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "请输入密码" id = "wordIn">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "wordIn">
+					</div>
+					<a href="#" class = "isSure">登录</a>
+					<a href="#" class = "resign">重置密码</a>
+					<!-- 错误提示 -->
+					<div class = "mask">
+						<img src="login_images/cancel@2x.png" alt="">
+						<p>账号或者密码错误</p>
+					</div>
 				</div>
-				<div class = "inputIn">
-					<input type="password" placeholder = "请输入密码">
-					<img src="login_images/cancel.png" alt="" class = "delete">
+				<!-- 重置页内容 -->
+				<div class = "resignOut">
+					<div class = "inputIn">
+						<input type="text" style = "color:#D3AD66" id = "resigntest">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "resigntest">
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "输入验证码">
+						<a href = "#" class = "userCode">获取验证码</a>
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "输入新密码" id = "resignword">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "resignword">
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "再次输入密码" id = "resignwordAgain">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "resignwordAgain">
+					</div>
+					<a href="#" class = "isSure">确定</a>
 				</div>
-				<a href="#" class = "isSure">登录</a>
-				<a href="#" class = "resign">重置密码</a>
+			</div>
+			<!-- 注册框 -->
+			<div class = "signUp">
+				<img src="login_images/triangle.png" alt="" class = "arrow">
+				<div class = "signInsize">
+					<div class = "inputIn">
+						<input type="text" placeholder = "请输入手机号码" id = "signUptest" class = "nowwell">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "signUptest">
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "输入验证码">
+						<a href = "#" class = "userCode">获取验证码</a>
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "创建密码 (6-16位数字或字母)" id = "signUpword">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "signUpword">
+					</div>
+					<div class = "inputIn">
+						<input type="password" placeholder = "再次输入密码" id = "signUpwordAgain">
+						<img src="login_images/cancel.png" alt="" class = "delete" data-input = "signUpwordAgain">
+					</div>
+					<p class = "agreement">
+						<img src="login_images/right@2x.png" alt="">
+						<span>我已阅读 并同意《用户注册协议》</span>
+					</p>
+					<a href="#" class = "isSure">确定</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -63,5 +120,7 @@
 			</a>
 		</p>
 	</footer>
+	<script src = "js/jquery-1.11.3.js"></script>
+	<script src = "js/login.js"></script>
 </body>
 </html>
