--- a/index/VIPPower.html
+++ b/index/VIPPower.html
@@ -145,6 +145,22 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- 左边弹出侧栏按钮 -->
+	<a href="#" id = "navbtn">
+		<img src="VIPPower_images/logo.png" alt="">
+	</a>
+	<!-- 遮罩层 -->
+	<div class= "navmask"></div>
+	<!-- 侧边栏选项 -->
+	<div class = "navselect">
+		<a href="index.html" class = "bgc">首页</a>
+		<a href="shop.html" class = "bgc">商城</a>
+		<a href="drinking.html" class = "bgc">酒友圈</a>
+		<a href="#" class = "bgc">社区</a>
+		<a href="myMain.html" class = "bgc">我的</a>
+		<a href="#" class = "bgc">下载App</a>
+	</div>
 	<script src = "js/jquery-1.11.3.js"></script>
 	<script src = "js/VIPPower.js"></script>
 </body>
