--- a/index/myMain.html
+++ b/index/myMain.html
@@ -19,6 +19,7 @@
 					<p>Coco-coffee</p>
 					<p>VIP4</p>
 				</div>
+				<a href="login.html" class = "login">登录/注册</a>
 				<div class = "merberClub">会员俱乐部 ></div>
 			</div>
 			<div class = "userActive">
@@ -67,22 +68,27 @@
 				<a href="#">
 					<span>代付款</span>
 					<img src="mymain_images/icon_wallet@2x.png" alt="">
+					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待发货</span>
 					<img src="mymain_images/icon_Undelivered-@2x.png" alt="">
+					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待收货</span>
 					<img src="mymain_images/icon_yunshu@2x.png" alt="">
+					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待评价</span>
 					<img src="mymain_images/icon_pingjia@2x.png" alt="">
+					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>退款/售后</span>
 					<img src="mymain_images/icon_shouhou@2x.png" alt="">
+					<span class = "num">1</span>
 				</a>
 			</div>
 			<!-- 我的礼品 -->
@@ -118,7 +124,7 @@
 		</div>
 		<div class = "vipService">
 			<a href="#">
-				<img src="mymain_images/icon_service@2x.png" alt="">
+				<img src="mymain_images/icon_footprint@3x.png" alt="">
 				<span>我的足迹</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -127,7 +133,7 @@
 		</div>
 		<div class = "vipService">
 			<a href="#">
-				<img src="mymain_images/icon_service@2x.png" alt="">
+				<img src="mymain_images/icon_setting@2x.png" alt="">
 				<span>设置</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -136,7 +142,16 @@
 		</div>
 		<div class = "vipService lastDistance">
 			<a href="#">
-				<img src="mymain_images/icon_service@2x.png" alt="">
+				<img src="mymain_images/feedback.png" alt="">
+				<span>意见反馈</span>
+				<span class = "vipSign">
+					<span> ></span>
+				</span>
+			</a>
+		</div>
+		<div class = "vipService lastDistance">
+			<a href="#">
+				<img src="mymain_images/icon_information@2x.png" alt="">
 				<span>版本信息</span>
 				<span class = "vipSign">
 					<span> ></span>
