--- a/index/login.html
+++ b/index/login.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class = "inputIn">
 						<input type="password" placeholder = "输入验证码">
-						<a href = "#" class = "userCode">获取验证码</a>
+						<a href = "#" class = "resignCode">获取验证码</a>
 					</div>
 					<div class = "inputIn">
 						<input type="password" placeholder = "输入新密码" id = "resignword">
@@ -77,7 +77,7 @@
 					</div>
 					<div class = "inputIn">
 						<input type="password" placeholder = "输入验证码">
-						<a href = "#" class = "userCode">获取验证码</a>
+						<a href = "#" class = "signupCode">获取验证码</a>
 					</div>
 					<div class = "inputIn">
 						<input type="password" placeholder = "创建密码 (6-16位数字或字母)" id = "signUpword">
@@ -92,6 +92,12 @@
 						<span>我已阅读 并同意《用户注册协议》</span>
 					</p>
 					<a href="#" class = "isSure">确定</a>
+					<div class = "signupMask">
+						<img src="login_images/cancel@2x.png" alt="">
+						<p>提示</p>
+						<p>该号码已经注册</p>
+						<p>请直接点击登录</p>
+					</div>
 				</div>
 			</div>
 		</div>
