--- a/index/groupbuy.html
+++ b/index/groupbuy.html
@@ -5,34 +5,37 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/onceKill.css">
+	<link rel="stylesheet" href="css/groupbuy.css">
 </head>
 <body>
 	<header id = "top">
-		<a href="#" class = "top">
-			<img src="onceKill_images/banner1.png" alt="">
-		</a>
-		<p class = "topTitle">
-			<img src="onceKill_images/oncekill.png" alt="">
-			<i>超级大牌,今日秒不停！</i>
+		<img src="groupbuy_images/lance.png" alt="" class = "topTitle">
+		<p>没看到自己心仪的团购？</p>
+		<p>那不如挑一款属于自己的好酒，寻找同道中人！</p>
+		<!-- 发起团购按钮 -->
+		<p class = "top">
+			<a href="#">发起我的团购</a>
 		</p>
 	</header>
 	<section id = "main">
-		<!-- 倒计时 -->
-		<p class = "lastTime">
-			<span class = "rob">抢购中 先抢先抱回家~</span>
-			<span class = "timeshow">
-				<span>距离结束</span>
-				<span>
-					<span class = "times hour"></span>
-					<span>:</span>
-					<span class = "times minute"></span>
-					<span>:</span>
-					<span class = "times second"></span>
-				</span>
-			</span>
-		</p>
-		<!-- 秒杀商品 -->
+		<!-- 参团商品 -->
+		<div class = "killshop">
+			<img src="onceKill_images/like1@2x.png" alt="">
+			<div class = "shopIntro">
+				<p>【酒品会】侯伯王酒庄干红葡萄酒Chateau Haut-Brion,Pessac-Leogn...</p>
+				<p class = "gorob">
+					<span>¥799</span>
+					<span>去抢购</span>
+				</p>
+				<p class = "sellDetail">
+					<span>¥599</span>
+					<span class = "havesell">已售72%</span>
+					<span>
+						<span class = "process"></span>
+					</span>
+				</p>
+			</div>
+		</div>
 		<div class = "killshop">
 			<img src="onceKill_images/like1@2x.png" alt="">
 			<div class = "shopIntro">
@@ -85,17 +88,6 @@
 			</div>
 		</div>
 	</section>
-	<div style = "width:100%;height:50px;background-color: #EDEEF0"></div>
-	<footer id = "footer">
-		<a href="#">
-			<img src="onceKill_images/coin.png" alt="">
-			<span>限时秒杀</span>
-		</a>
-		<a href="#">
-			<img src="onceKill_images/limit.png" alt="">
-			<span>积分秒杀</span>
-		</a>
-	</footer>
 	<script src = "js/jquery-1.11.3.js"></script>
 	<script src = "js/onceKill.js"></script>
 </body>
