--- a/index/index.html
+++ b/index/index.html
@@ -32,7 +32,7 @@
 						</a>
 						<p>签到</p>
 					</li>
-					<li>
+					<li class = "oncekill">
 						<a href="#">
 							<img src="images/miaosha@2x.png" alt="">
 						</a>
