--- a/index/groupbuy.html
+++ b/index/groupbuy.html
@@ -14,7 +14,7 @@
 		<p>那不如挑一款属于自己的好酒，寻找同道中人！</p>
 		<!-- 发起团购按钮 -->
 		<p class = "top">
-			<a href="#">发起我的团购</a>
+			<a href="myGroupBuy.html">发起我的团购</a>
 		</p>
 	</header>
 	<section id = "main">
