--- a/index/shopDetail.html
+++ b/index/shopDetail.html
@@ -130,11 +130,22 @@
 			<a href="#">
 				<img src="shopDetail_images/buying@2x.png" alt="">
 				<span>购物车</span>
+				<span class = "count">1</span>
 			</a>
 			<a href="#">加入购物车</a>
 			<a href="#">立即购买</a>
 		</div>
 	</footer>
+	<!-- 积分弹出框 -->
+	<div class = "mask">
+		<div class = "motai">
+			<p>
+				<img src="shopDetail_images/btn_sign@2x.png" alt="">
+				<span>购买可获得60会员积分</span>
+			</p>
+			<a href="#" class = "finish">完成</a>
+		</div>
+	</div>
 	<script src = "js/jquery-1.11.3.js"></script>
 	<script src = "js/idangerous.swiper-2.0.min.js"></script>
 	<script src = "js/shopDetail.js"></script>
