--- a/index/shopcar.html
+++ b/index/shopcar.html
@@ -15,10 +15,11 @@
 				<img src="shopcar_images/tuoyuan.png" alt="" class =  "select">
 				<img src="shopcar_images/store@2x.png" alt="" class = "shopPic">
 				<span>酒品会旗舰店</span>
+				<img src="shopcar_images/collectiong@2x.png" alt="" class = "collect">
 				<span class = "getEdit">
 					<a href="#">领券</a>
 					<span> | </span>
-					<a href="#">编辑</a>
+					<a href="#" class = "useredit">编辑</a> 
 				</span>
 			</p>
 			<!-- 购物车商品 -->
@@ -34,6 +35,13 @@
 						<span>¥789</span>
 						<span>x1</span>
 					</p>
+				</div>
+				<!-- 点击编辑出现修改数量 -->
+				<div class = "clickEdit">
+					<img src="shopcar_images/minus@2x.png" alt="" class = "minus">
+					<span class = "count">1</span>
+					<img src="shopcar_images/plus@2x.png" alt="" class = "plus">
+					<span>删除</span>
 				</div>
 			</div>
 		</div>
@@ -43,10 +51,11 @@
 				<img src="shopcar_images/tuoyuan.png" alt="" class =  "select">
 				<img src="shopcar_images/store@2x.png" alt="" class = "shopPic">
 				<span>酒品会旗舰店</span>
+				<img src="shopcar_images/collectiong@2x.png" alt="" class = "collect">
 				<span class = "getEdit">
 					<a href="#">领券</a>
 					<span> | </span>
-					<a href="#">编辑</a>
+					<a href="#" class = "useredit">编辑</a>
 				</span>
 			</p>
 			<!-- 购物车商品 -->
@@ -62,6 +71,13 @@
 						<span>¥789</span>
 						<span>x1</span>
 					</p>
+				</div>
+				<!-- 点击编辑出现修改数量 -->
+				<div class = "clickEdit">
+					<img src="shopcar_images/minus@2x.png" alt="" class = "minus">
+					<span class = "count">1</span>
+					<img src="shopcar_images/plus@2x.png" alt="" class = "plus">
+					<span>删除</span>
 				</div>
 			</div>
 		</div>
