--- a/index/makeSureOrder.html
+++ b/index/makeSureOrder.html
@@ -71,7 +71,7 @@
 			<span>快递免邮 &gt;</span>
 		</a>
 		<!-- 运费险 -->
-		<a href="#" class = "giveWay">
+		<a href="#" class = "giveWay" id = "insurance">
 			<span>运费险</span>
 			<span>未选择 &gt;</span>
 		</a>
@@ -108,6 +108,23 @@
 				<img src="shopcar_images/tuoyuan.png" alt="" class =  "select">
 			</div>
 			<a href="#" class="close">关闭</a>
+		</div>
+	</div>
+	<!-- 运费险弹出框 -->
+	<div class = "safeMask">
+		<div class = "safeway">
+			<p class = "safeTitle">运费险</p>
+			<div class = "safeOne">
+				<span>投保退货运费险，确认收货前退货可赔付8元</span>
+				<span>
+					<span>0.02元</span>
+					<img src="shopcar_images/tuoyuan.png" alt="" class =  "select">
+				</span>
+			</div>
+			<p class = "decision">
+				<a href="#" id = "cancel">取消</a>
+				<a href="#">确认</a>
+			</p>
 		</div>
 	</div>
 	<script src = "js/jquery-1.11.3.js"></script>
