--- a/index/goAssess.html
+++ b/index/goAssess.html
@@ -19,7 +19,12 @@
 			<span>差评</span>
 		</p>
 		<!-- 评论心得 -->
-		<div class = "assessContent"></div>
+		<div class = "assessContent">
+			<form action="">
+				<textarea name="" id="" placeholder="请写下您的心得吧..."></textarea>
+				<span><img src="goAssess_images/addpic@2x.png" alt=""></span>
+			</form>
+		</div>
 	</header>
 	<section id = "main">
 		<p class = "title">
@@ -53,6 +58,9 @@
 			</p>
 		</div>
 	</section>
+	<footer id = "footer">
+		<a href="#" class = "publish">发布</a>
+	</footer>
 	<script src = "js/jquery-1.11.3.js"></script>
 	<script src = "js/goAssess.js"></script>
 </body>
