--- a/index/shopcar.html
+++ b/index/shopcar.html
@@ -15,10 +15,10 @@
 				<img src="img/shopcar_images/tuoyuan.png" alt="" class =  "select">
 				<img src="img/shopcar_images/store@2x.png" alt="" class = "shopPic">
 				<span>酒品会旗舰店</span>
-				<img src="img/shopcar_images/collectiong@2x.png" alt="" class = "collect">
+				<img src="img/shopcar_images/collectiong@2x.png" alt="" class = "collect" style="display: none;">
 				<span class = "getEdit">
-					<a href="#">领券</a>
-					<span> | </span>
+					<a href="#" style="display: none;">领券</a>
+					<span style="display: none;"> | </span>
 					<a href="#" class = "useredit">编辑</a> 
 				</span>
 			</p>
@@ -51,10 +51,10 @@
 				<img src="img/shopcar_images/tuoyuan.png" alt="" class =  "select">
 				<img src="img/shopcar_images/store@2x.png" alt="" class = "shopPic">
 				<span>酒品会旗舰店</span>
-				<img src="img/shopcar_images/collectiong@2x.png" alt="" class = "collect">
+				<img src="img/shopcar_images/collectiong@2x.png" alt="" class = "collect" style="display: none;">
 				<span class = "getEdit">
-					<a href="#">领券</a>
-					<span> | </span>
+					<a href="#" style="display: none;">领券</a>
+					<span style="display: none;"> | </span>
 					<a href="#" class = "useredit">编辑</a>
 				</span>
 			</p>
@@ -82,7 +82,7 @@
 			</div>
 		</div>
 	</header>
-	<section id = "main">
+	<section id = "main" style="display: none;">
 		<p class= "title">—— 购物车猜你喜欢 ——</p>
 		<!-- 猜你喜欢列表 -->
 		<div class = "shopList">
