--- a/index/wxMymain.html
+++ b/index/wxMymain.html
@@ -1,12 +1,11 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 	<title>Document</title>
-	<link rel="stylesheet" href="/index/css/common.css">
-	<link rel="stylesheet" href="/index/css/myMain.css">
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/wxMymain.css">
 </head>
 <body>
 	<header id = "top">
@@ -14,7 +13,7 @@
 			<div class = "topTitle">我 的</div>
 			<div class = "topIntroduce">
 				<a href="#" class = "userPic">
-					<img src="/index/img/VIPClub_images/301549441078143590.jpg" alt="">
+					<img src="img/VIPClub_images/301549441078143590.jpg" alt="">
 				</a>
 				<div class = "userLever">
 					<p>Coco-coffee</p>
@@ -37,7 +36,7 @@
 					<span>88</span>
 				</a>
 				<a href="#">
-					<span><img src="/index/img/mymain_images/389580824050470642.png" alt=""></span><br/>
+					<span><img src="img/wxMymain_images/389580824050470642.png" alt=""></span><br/>
 					<span>我的资料</span>
 				</a>
 			</div>
@@ -47,7 +46,7 @@
 		<!-- 会员服务 -->
 		<div class = "vipService" style="display: none;">
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_service@2x.png" alt="">
+				<img src="img/wxMymain_images/icon_service@2x.png" alt="">
 				<span>会员服务</span>
 				<span class = "vipSign">
 					<span>签到享特权 ></span>
@@ -58,7 +57,7 @@
 		<div class = "orderGift">
 			<!-- 我的订单 -->
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_order@2x.png" alt="">
+				<img src="img/wxMymain_images/icon_order@2x.png" alt="">
 				<span>我的订单</span>
 				<span class = "vipSign">
 					<span>查看全部订单 ></span>
@@ -68,55 +67,55 @@
 			<div class = "orderDetail">
 				<a href="#">
 					<span>代付款</span>
-					<img src="/index/img/mymain_images/icon_wallet@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_wallet@2x.png" alt="">
 					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待发货</span>
-					<img src="/index/img/mymain_images/icon_Undelivered-@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_Undelivered-@2x.png" alt="">
 					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待收货</span>
-					<img src="/index/img/mymain_images/icon_yunshu@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_yunshu@2x.png" alt="">
 					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>待评价</span>
-					<img src="/index/img/mymain_images/icon_pingjia@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_pingjia@2x.png" alt="">
 					<span class = "num">1</span>
 				</a>
 				<a href="#">
 					<span>退款/售后</span>
-					<img src="/index/img/mymain_images/icon_shouhou@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_shouhou@2x.png" alt="">
 					<span class = "num">1</span>
 				</a>
 			</div>
 			<!-- 我的礼品 -->
 			<a href="#" style="display: none;">
-				<img src="/index/img/mymain_images/icon_gift@2x.png" alt="">
+				<img src="img/wxMymain_images/icon_gift@2x.png" alt="">
 				<span>我的礼品</span>
 			</a>
 			<!-- 礼品详情 -->
 			<div class = "GiftDetail" style="display: none;">
 				<a href="#">
 					<span>红包</span>
-					<img src="/index/img/mymain_images/icon_wallet@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_wallet@2x.png" alt="">
 				</a>
 				<a href="#">
 					<span>优惠券</span>
-					<img src="/index/img/mymain_images/icon_Undelivered-@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_Undelivered-@2x.png" alt="">
 				</a>
 				<a href="#">
 					<span>收到的礼物</span>
-					<img src="/index/img/mymain_images/icon_yunshu@2x.png" alt="">
+					<img src="img/wxMymain_images/icon_yunshu@2x.png" alt="">
 				</a>
 			</div>
 		</div>
 		<!-- 地址管理 足记 设置 版本信息 -->
 		<div class = "vipService">
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_service@2x.png" alt="">
+				<img src="img/wxMymain_images/icon_service@2x.png" alt="">
 				<span>地址管理</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -125,7 +124,7 @@
 		</div>
 		<div class = "vipService" style="display: none;">
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_footprint@3x.png" alt="">
+				<img src="img/wxMymain_images/icon_footprint@3x.png" alt="">
 				<span>我的足迹</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -134,7 +133,7 @@
 		</div>
 		<div class = "vipService" style="display: none;">
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_setting@2x.png" alt="">
+				<img src="img/wxMymain_images/icon_setting@2x.png" alt="">
 				<span>设置</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -143,7 +142,7 @@
 		</div>
 		<div class = "vipService lastDistance">
 			<a href="#">
-				<img src="/index/img/mymain_images/feedback.png" alt="">
+				<img src="img/wxMymain_images/feedback.png" alt="">
 				<span>意见反馈</span>
 				<span class = "vipSign">
 					<span> ></span>
@@ -152,8 +151,8 @@
 		</div>
 		<div class = "vipService lastDistance">
 			<a href="#">
-				<img src="/index/img/mymain_images/icon_information@2x.png" alt="">
-				<span>版本信息</span>
+				<img src="img/wxMymain_images/youa.png" alt="">
+				<span>优惠券</span>
 				<span class = "vipSign">
 					<span> ></span>
 				</span>
@@ -163,7 +162,7 @@
 	</section>
 	<!-- 页面底部 -->
 	<footer id = "footer"></footer>
-	<script src = "/index/js/jquery-1.11.3.js"></script>
-	<script src = "/index/js/myMain.js"></script>
+	<script src = "js/jquery-1.11.3.js"></script>
+	<script src = "js/wxMymain.js"></script>
 </body>
 </html>
